# FlatBot_Driver

./: .gitignore  README.md
assembly_control/: CMakeLists.txt  package.xml
assembly_control/config/: assembly_view.rviz  test_setup.yaml
assembly_control/launch/: sim_demo.launch  test.launch
assembly_control/meshes/: module_3_visual.stl
assembly_control/src/: module_manager.cpp
assembly_control/urdf/: three_way.xacro
flat_bot_driver/: CMakeLists.txt
flat_bot_driver/src/: driver_test.cpp  herkulex_interface.cpp  herkulex_interface.h
flat_bot_support/meshes/visual/: four_sirom_track.stl  four_sirom_track_physics.ods
flat_bot_support/urdf/: flat_bot_macro.xacro  passive_sirom_macro.xacro
smart_fusion_sensor/: CMakeLists.txt  package.xml
smart_fusion_sensor/cfg/: razor_imu_1_calibration.yaml  razor_imu_2_calibration.yaml  smart_2_sensor_calibration.csv
smart_fusion_sensor/include/dp_ptu47_msgs/: GetLimitsRequest.h  GetLimitsResponse.h  PanTilt.h  PanTiltStamped.h  Reset.h  ResetRequest.h  ResetResponse.h  SendCommandRequest.h  SendCommandResponse.h  SendTrajectoryRequest.h  SendTrajectoryResponse.h
smart_fusion_sensor/include/gncTK/: calibration.h  dem.h  fusion.h  fusion_function.h  fusion_quad_tree.h  fusion_structured.h  gncTK.h  lidar_sim.h  mesh.h  mesh_analysis.h  utils.h
smart_fusion_sensor/launch/: scan.launch  startup.launch  startup_control.launch
smart_fusion_sensor/meshes/: sensor_frame.stl  tilt_platform.stl
smart_fusion_sensor/msg/: Progress.msg  ScanMesh.msg  Triangle.msg  Vertex.msg
smart_fusion_sensor/rviz/: fusion_viewer.rviz
smart_fusion_sensor/src/: half_image_pub.cpp  publish_image.cpp  publish_mesh.cpp  sensor_test.cpp  smart_rover_sensor.cpp  smart_rover_sensor.h
smart_fusion_sensor/srv/: PerformScan.srv  RegisterLocalMap.srv  SetMapFix.srv
smart_fusion_sensor/urdf/: sensor.xacro  sensor_macro.xacro
